k8s/3-custom-service/custom-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: custom-api
  name: custom-api
  namespace: koinos
spec:
  replicas: 1
  selector:
    matchLabels:
      service: custom-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        service: custom-api
    spec:
      containers:
        - name: custom-api
          image: {user}/{repository}:{tag}
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
          imagePullPolicy: Always
      serviceAccountName: default
