k8s/3-custom-service/custom-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: custom-api
  name: custom-api
  namespace: koinos
spec:
  ports:
    - name: "8000"
      protocol: TCP
      port: 8000
      targetPort: 3000
  selector:
    service: custom-api
  type: LoadBalancer
